[package]
name = "SIS-RS-ONE"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver = { version = "0.22.0", optional = true }
human-sort = "0.2.2"
dns-lookup = "1.0.8"
num-bigint = "0.4.3"
queues = "1.0.2"
ctrlc = "3.2.3"
rand = "0.8.5"
pad = "0.1.6"

[features]
trust-dns = ["dep:trust-dns-resolver"]
host-resolv = ["trust-dns"]

default = ["trust-dns"]

# TODO: tor-resolver = ["trust-dns"]
