[package]
name = "SIS-RS-ONE"
version = "0.2.0"
edition = "2021"
authors = ["Luxter77 <19197331+Luxter77@users.noreply.github.com>"]
readme = "README.md"
license-file = "LICENSE.txt"
description = "aaaaaaeeiou uu asdu afsau f"
repository = "https://github.com/Luxter77/SIS-RS-ONE/"
build = "build.rs"

[dependencies]
trust-dns-resolver = { version = "0.22.0", optional = true }
lazy_static = "1.4.0"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
num-traits = "0.2.15"
human-sort = { git = "https://github.com/luxter77/human-sort" }
# human-sort = "0.2.2"
dns-lookup = "1.0.8"
itertools = "0.10.5"
queues = "1.0.2"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
ctrlc = "3.2.3"
rand = { version = "0.8.5", features = ["std_rng"] }
clap = { version = "4.0.32", features = [ "derive", "cargo" ]}
rsa = "0.7.2"
pad = "0.1.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
trust-dns = ["dep:trust-dns-resolver"]
host-resolv = ["trust-dns"]
Sequential-Generator = []
PRand-LCG = []

default = ["trust-dns"]

# TODO: tor-resolver = ["trust-dns"]

[package.metadata.winres]
OriginalFilename = "SIS-RS-ONE.exe"
FileDescription = "aaaaaaeeiou uu asdu afsau f"
LegalCopyright = "Copyright © 2022"
